--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
     <table></table>
     <hr>
     <p align="center"><a href="board/getBoardList">글 목록 바로가기</a></p>
+    <p align="center"><a href="getBoardList_json">글 상세 바로가기</a></p>
     <p align="center"><a href="system/login">로그인</a></p>
     <br>
     <hr>
